Theme M : always show scrollbars to prevent jumping

--- a/themes/m/assets/src/scss/all.scss
+++ b/themes/m/assets/src/scss/all.scss
@@ -15,3 +15,9 @@ a.rss-link {
        content: "\f09e";
     }
   }
+
+/* Always show the scrollbar to prevent "jumping" */
+html {
+  overflow: -moz-scrollbars-vertical;
+  overflow-y: scroll;
+}
